[package]
name = "mqtt2influx"
version = "1.3.2"
authors = ["Carlos Quintana <cquintana@verbio.com>"]
edition = "2018"
publish = false

[workspace]
members = ["mqtt2influx-core"]

[dependencies]
mqtt2influx-core = { path = "./mqtt2influx-core"}

actix-service = "2.0.0-beta.4"
actix-web = {version = "4.0.0-beta.3", features = ["rustls"] }
clap = "2"
config = "0.10.1"
dotenv = "0.15.0"
futures = "0.3"
git-version = "0.3.4"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-futures = "0.2"
tracing-log = { version = "0.1", features = ["env_logger"] }
tracing-subscriber = "0.2"
