[package]
name = "mqtt2influx-core"
version = "0.1.0"
authors = ["Carlos Quintana <carlos@cquintana.dev>"]
edition = "2018"
publish = false
autotests = false

[lib]
doctest = false

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = "0.4"
futures = "0.3"
influxdb = { version = "0.3.0", features = ["derive"] }
rand = "0.7.3"
rumqttc = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-compat-02 = "0.2"
tracing = "0.1"

[[test]]
path = "tests/lib.rs"
name = "integration"
